# ratslang

./: .gitignore  Cargo.toml  README.md  examples.rl
.forgejo/workflows/: tests.yml
.github/workflows/: tests.yml
ratslang-lsp/: Cargo.toml  README.md
ratslang-lsp/src/: lib.rs  main.rs  schema.rs
ratslang-lsp/src/handlers/: code_actions.rs  completion.rs  hover.rs  mod.rs  symbols.rs
ratslang/src/: annotation_tests.rs  lib.rs  tests.rs
schemas/: pelorus.rl
src/: lib.rs
vscode/: CHANGELOG.md  README.md  package.json  vsc-extension-quickstart.md
vscode/syntaxes/: rl.tmLanguage.json
