[package]
name = "ratslang"
version = "0.4.0"
edition = "2024"
authors = ["Christopher Sieh <stelzo@steado.de>"]
description = "Simple configuration language for working with physical systems."
repository = "https://codeberg.org/uos-ce/ratslang"
license = "MIT OR Apache-2.0"
keywords = ["config", "lang", "parser", "robotics"]
categories = ["science::robotics", "parser-implementations"]
readme = "README.md"
documentation = "https://docs.rs/ratslang"
homepage = "https://codeberg.org/uos-ce/ratslang"
exclude = [".cargo_vcs_info.json", ".forgejo/*", "vscode/*", "target/*"]
rust-version = "1.85"

[dependencies]
log = "0.4.28"
logos = "0.15.1"
chumsky = { version = "0.12", default-features = false, features = ["std"] }
ariadne = "0.4"
anyhow = "1"
uom = "0.37.0"
