[package]
name = "ratslang"
version = "0.4.1"
edition = "2024"
authors = ["Christopher Sieh <stelzo@steado.de>"]
description = "A minimal and extensible configuration language for fallible humans working with physical systems."
repository = "https://codeberg.org/stelzo/ratslang"
license = "MIT OR Apache-2.0"
keywords = ["config", "lang", "parser", "robotics"]
categories = ["science::robotics", "parser-implementations"]
readme = "README.md"
documentation = "https://docs.rs/ratslang"
homepage = "https://lib.rs/crates/ratslang"
exclude = [".cargo_vcs_info.json", ".forgejo/*", "vscode/*", "target/*"]
rust-version = "1.85"

[dependencies]
log = "0.4.28"
logos = "0.15.1"
chumsky = { version = "0.12", default-features = false, features = ["std"] }
ariadne = "0.4"
anyhow = "1.0"
uom = "0.37.0"
