[package]
name = "ratslang-lsp"
version = "0.1.0"
edition = "2024"
authors = ["Christopher Sieh <stelzo@steado.de>"]
description = "Language Server Protocol implementation for Ratslang"
license = "MIT OR Apache-2.0"
rust-version = "1.85"

[dependencies]
ratslang = { path = "../ratslang" }
tree-sitter-ratslang = { git = "https://codeberg.org/stelzo/tree-sitter-ratslang" }
tower-lsp-server = "0.23"
tokio = { version = "1", features = ["full"] }
tree-sitter = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap = "6"
parking_lot = "0.12"

[dev-dependencies]
pretty_assertions = "1"
